<resources>
    <string name="app_name">Kursovai</string>
    <string name="btm_name">Login</string>
    <string name="btm2_name">Create account</string>
    <string name="text_main">--------Don\'t have account yet?--------</string>
    <string name="text_main2"><b>Log in to your MEE account</b></string>
    <string name="text_main3"><b>Username</b></string>
    <string name="text_main4"><b>Password</b></string>
    <string name="login">Enter username</string>
    <string name="pasw">Enter password</string>
    <string name="forgot"><b>Forgot my username</b></string>
    <string name="forgot2"><b>Forgot my password</b></string>
    <string name="text_main5">Courses</string>
    <string name="text_main6">Homework</string>
    <string name="text_main7">Challenge</string>
    <string name="text_main8">Progress</string>
    <string name="text_main9">More</string>
    <string name="text_main10"><b>Everyday activities 1</b></string>
    <string name="text_main11"><b>10 questions to answer</b></string>
    <string name="text_main12"><b>Practice makes perfect</b></string>
    <string name="text_main13"><b>Rules:</b></string>
    <string name="text_main14"><b>Answer all the questions. If you get one </b></string>
    <string name="text_main15"><b>wrong, you\'ll get a chance to see the correct answer.</b></string>
    <string name="text_main16"><b>correct answer.</b></string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btm1_name">Start  ></string>
    <string name="gtw1">Gateway to the World A2</string>
    <string name="gtw2">eReader</string>
    <string name="gtw3"><b>On-the-Go Practice</b> </string>
    <string name="gtw4">Student\'s Resource Centre</string>
    <string name="gtw5">Starter</string>
    <string name="gtw6">Unit 1</string>
    <string name="gtw7">Unit 2</string>
    <string name="gtw8">Unit 3</string>
    <string name="gtw9">Unit 4</string>
    <string name="gtw10">Unit 5</string>
    <string name="gtw11">Vocabulary</string>
    <string name="gtw12">Grammar</string>
    <string name="gtw13">Gateway to the World B1</string>
    <string name="gtw14">Gateway to the World B2</string>
    <string name="gtw15">Gateway to the World C1</string>
    <string name="gtw16">Gateway to the World C2</string>
    <string name="google_maps_key" />
    <string name="btnansw">Next</string>
    <string name="an1">an1</string>
    <string name="an2">a2</string>
    <string name="an3">a3</string>
    <string name="an4">a4</string>
    <string name="total">Total Questions</string>
    <string name="correct">Correct Answers</string>
    <string name="wrong">Wrong Answers</string>
    <string name="home">Go Home</string>
    <string name="tests">Tests</string>
    <string name="exit">Exit</string>
    <string name="congradualtions">Congradualtions!</string>

</resources>