<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/maincolor">

    <View
        android:id="@+id/view1"
        android:layout_width="950dp"
        android:layout_height="900dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="60dp"
        android:background="@color/white">

    </View>

    <TextView
        android:id="@+id/tview"
        android:layout_width="650dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="79dp"
        android:text="@string/text_main2"
        android:textSize="20sp">
    </TextView>

    <TextView
        android:id="@+id/tview2"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_below="@id/tview"
        android:layout_marginStart="80dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_main3"
        android:textSize="17sp">

    </TextView>

    <EditText
        android:id="@+id/tedit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tview2"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:background="@color/field"
        android:ems="10"
        android:hint="@string/login"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck">
    </EditText>

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tedit"
        android:layout_marginStart="80dp"
        android:text="@string/forgot"
        android:textColor="@color/blue">

    </TextView>

    <TextView
        android:id="@+id/tview3"
        android:layout_below="@id/forgot"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_main4"
        android:textSize="17sp">
    </TextView>

    <EditText
        android:id="@+id/tedit2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tview3"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:background="@color/field"
        android:ems="10"
        android:hint="@string/pasw"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        tools:ignore="TextContrastCheck,TextContrastCheck">
    </EditText>

    <TextView
        android:id="@+id/forgot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/forgot2"
        android:textColor="@color/blue"
        android:layout_below="@id/tedit2">

    </TextView>

    <Button
        android:id="@+id/button1"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:layout_below="@id/tedit2"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/btm_color"
        android:text="@string/btm_name">


    </Button>

</RelativeLayout>