<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity7"
    android:background="@color/maincolor">


    <FrameLayout
        android:layout_width="270dp"
        android:layout_height="450dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="60dp"
        android:layout_marginStart="70dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tview"
            android:layout_width="190dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_main10"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/tview2"
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="70dp"
            android:text="@string/text_main11"
            android:textSize="15sp">

        </TextView>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:src="@drawable/target">

        </ImageView>

        <TextView
            android:id="@+id/tview3"
            android:layout_width="160dp"
            android:layout_height="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="200dp"
            android:text="@string/text_main12"
            android:textSize="15sp">

        </TextView>

        <TextView
            android:id="@+id/tview4"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="320dp"
            android:text="@string/text_main13"
            android:textColor="@color/blue"
            android:textSize="14sp">

        </TextView>

        <TextView
            android:id="@+id/tview5"
            android:layout_width="280dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="360dp"
            android:text="@string/text_main14"
            android:textSize="12sp">

        </TextView>

        <TextView
            android:id="@+id/tview6"
            android:layout_width="280dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="374dp"
            android:text="@string/text_main15"
            android:textSize="12sp">

        </TextView>

        <TextView
            android:id="@+id/tview7"
            android:layout_width="280dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="389dp"
            android:text="@string/text_main16"
            android:textSize="12sp">

        </TextView>

    </FrameLayout>


    <FrameLayout
        android:layout_width="1000dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <Button
            android:id="@+id/button1"
            android:layout_width="130dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/btm_color"
            android:text="@string/btm1_name"
            android:layout_marginStart="140dp">

        </Button>

    </FrameLayout>

</RelativeLayout>