<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity8"
    android:background="@color/maincolor">

    <FrameLayout
        android:layout_width="950dp"
        android:layout_height="900dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="60dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_marginStart="90dp"
            android:layout_marginTop="50dp"
            tools:text="@string/app_name"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/an1"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/an2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/an3"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="300dp"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/an4"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"/>

    </FrameLayout>

</RelativeLayout>