<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity9"
    android:background="@color/maincolor">

    <FrameLayout
        android:layout_width="950dp"
        android:layout_height="900dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="60dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congradualtions"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="100dp"
            android:layout_marginStart="30dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:layout_marginTop="200dp"
            android:layout_marginStart="30dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            android:layout_marginTop="300dp"
            android:layout_marginStart="30dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_marginTop="100dp"
            android:layout_marginStart="160dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correct"
            android:layout_marginTop="200dp"
            android:layout_marginStart="160dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            android:layout_marginTop="300dp"
            android:layout_marginStart="160dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btnres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="350dp"
            android:text="@string/home"
            android:backgroundTint="@color/blue"/>

    </FrameLayout>

</RelativeLayout>