<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/maincolor">

    <View
        android:id="@+id/view1"
        android:layout_width="750dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="200dp"
        android:background="@color/white">

    </View>

    <Button
        android:id="@+id/button1"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="@color/btm_color"
        android:text="@string/btm_name">

    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:layout_below="@id/button1"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/btm_color"
        android:text="@string/btm2_name">

    </Button>

    <TextView
        android:layout_width="450dp"
        android:layout_height="20dp"
        android:layout_below="@id/button1"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_main">

    </TextView>
</RelativeLayout>